--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
     "react-window": "^1.8.6",
     "request-ip": "^3.3.0",
     "semver": "^7.5.4",
+    "sharp": "^0.33.5",
     "thenby": "^1.3.4",
     "uuid": "^9.0.0",
     "yup": "^0.32.11",
